# funcoin

./: .gitignore  .gitmodules  README.md  binance_kline_daily_1m-20240930.csv  binance_kline_daily_1m-20240930.tar  binance_kline_daily_1m-20241001.tar  binance_kline_daily_1m-20241002.tar  binance_kline_daily_1m-20241003.tar  binance_kline_daily_1m-20241004.csv  binance_kline_daily_1m-20241004.tar  binance_kline_daily_1m-20241020.csv  dump.rdb  pyproject.toml  pyproject2.toml  setup.py
darkcoin/base/db/: __init__.py  mysql.py
darkcoin/base/drive/: job.py  lanzou.py  oss.py  transform.py
darkcoin/base/tables/: __init__.py  kline.py  strategy.py  trade.py
darkcoin/coins/base/: file.py
darkcoin/coins/okex/: load.py
darkcoin/server/: download.py  notecoin_celery.py  notecoin_server.py  script.py  strategy.py
darkcoin/strategy/binance/: auto.py  strategy1.py  strategy2.py
darkcoin/task/: __init__.py  base.py  load.py
darkcoin/useless/okex/: example.py  utils.py
darkcoin/utils/: log.py
darkcoins/base/db/: __init__.py  mysql.py
darkcoins/base/drive/: job.py  oss.py  (+3 more)
darkcoins/server/: download.py  notecoin_celery.py  notecoin_server.py  script.py  strategy.py
darkcoins/task/: __init__.py  base.py  load.py
darkcoins/utils/: log.py
example/: coin.db  example_v3.py  example_v5.py  market_e.py  okex_exmple.py
examples/: example_v3.py  example_v5.py  market_e.py  okex-v5.html  okex_exmple.py
funcoin/server/: download.py  notecoin_server.py  script.py  strategy.py
funcoin/task/: base.py  load.py
notecoin/server/: download.py  notecoin_celery.py  notecoin_server.py  script.py  strategy.py
notecoin/task/: __init__.py  base.py  load.py
notecoin/utils/: log.py
script/: __version__.md
src/funcoin/: __init__.py
useless/okex/: consts.py  example.py  types.py  utils.py
useless/server/: download.py  notecoin_celery.py  notecoin_server.py  script.py  strategy.py
useless/strategy/: __init__.py
useless/task/: base.py  load.py
useless/utils/: log.py  time.py
(+331 files in other folders)
